--- a/src/adaptivelab/coke/templates/index.html
+++ b/src/adaptivelab/coke/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html class="no-js">
+{% load static %}
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="{% static 'main.css' %}">
+        
+        <script src="http://codeorigin.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
+        <script src="{% static 'main.js' %}" type="text/javascript"></script>
         
         </head>
     <body>
@@ -23,6 +28,17 @@
                     <div class="container">
                         <a class="brand" href="/">Adaptive Lab's Technical Test</a>
                     </div>
+                </div>
+            </div>
+            <div class="row well top">
+                <div class="span12" id="messages">
+                    <dl>
+                        <dt>{{tweet.name}} ({{tweet.sentiment}}):</dt>
+                        <dd>{{tweet.message}} <strong>{{tweet.occurance}} occurances</strong></dd>
+                    </dl>
+                </div>
+                <div class="span12">
+                    <button>Fetch Messages</button>
                 </div>
             </div>
         </div>
