--- a/src/adaptivelab/coke/templates/index.html
+++ b/src/adaptivelab/coke/templates/index.html
@@ -13,8 +13,12 @@
         
         <script src="http://codeorigin.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
         <script src="{% static 'main.js' %}" type="text/javascript"></script>
-        
-        </head>
+        <script type="text/javascript">
+$(document).ready(function() {
+        coke.execute();
+});
+        </script>
+    </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
