basic async data fetching completed

--- a/src/adaptivelab/coke/templates/index.html
+++ b/src/adaptivelab/coke/templates/index.html
@@ -35,11 +35,11 @@ $(document).ready(function() {
                 </div>
             </div>
             <div class="row well top">
+                <div class="span12 pull-right">
+                    <button class="btn btn-primary pull-right">Fetch Messages</button>
+                </div>
                 <div class="span12" id="messages">
                     
-                </div>
-                <div class="span12">
-                    <button>Fetch Messages</button>
                 </div>
             </div>
         </div>
